<resources>
    <string name="app_name">Lab9</string>
    <string name="james_alexander_lab_9">James Alexander Lab 9</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="store">Store</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="retrieve">Retrieve</string>
    <string name="external_storage">External Storage</string>
    <string name="check_storage">Check Storage</string>
    <string name="store_file">Store File</string>
    <string name="title_activity_esstatus">ESstatusActivity</string>
    <string name="external_storage_status">External Storage Status</string>
    <string name="status">Status</string>
    <string name="size_in_megabytes">Size in Megabytes</string>
    <string name="adding_ap_scan_to_external_storage">Adding AP Scan To External Storage</string>
    <string name="ap_scan">AP Scan</string>
</resources>
